nuevo endpoint y prueba desplegado

--- a/package.json
+++ b/package.json
@@ -1,11 +1,23 @@
 {
   "name": "nerds-c",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "core principal nerds web",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
+    "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "alivier",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  }
 }
