--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nerds-c",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "core principal nerds web",
   "main": "index.js",
   "scripts": {
@@ -12,9 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-validator": "^7.0.1",
     "mongoose": "^8.0.0",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
